# JobScrapeTailorAgent

./: README.md  agent_nodes.py  database.py  distiller.py  email_scraper.py  learning_patterns.md  models.py  pyproject.toml  run_agent.py  web_scraper.py
