[project]
name = "jobscrape-tailor-agent"
version = "1.0.0"
description = "Autonomous job-hunting agent: scrapes listings, tailors resumes & cover letters using AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.11.*"

dependencies = [
    # Web scraping (JS-heavy sites via headless browser)
    "crawl4ai>=0.4.0",
    "playwright>=1.44.0",

    # LLM providers (pick the ones you use)
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-xai>=0.2.0",
    "langchain-ollama>=0.2.0",

    # Gmail API
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",

    # Data validation
    "pydantic>=2.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[tool.uv]
python-preference = "managed"

